--- a/less/blocks/ads.less
+++ b/less/blocks/ads.less
@@ -7,10 +7,30 @@
                 display: flex;                
     }
     
-    &__time_img {
-       // float: left;
-        margin-right: 10px;
+    &__timer {
+        position: relative;
+        width: 270px;
+        height: 300px;
+        background: url("@{img_url}/timer-2.svg") 0 0 no-repeat; 
+        
+        &_num {
+            position: absolute;
+            top: 70px;
+            left: 30px;
+            text-align: center;
+            vertical-align: middle;
+            display: block;
+            width: 180px;
+            height: 180px;
+            border: 10px solid @pink;
+            border-radius: 100%;
+            color: @pink;
+            font-weight: 700;
+            font-size: 120px;
+            
+        }
     }
+    
     
     &__article {
         width: 300px;
