--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -1,7 +1,7 @@
 .features {
     overflow: hidden;
 
-&__slogan {
+    &__slogan {
         padding: (25px/@mobile_width)*100%;
         color: @blue;
         font-size: @very_big_size;
@@ -32,6 +32,7 @@
     
     &__block{
         position: relative;
+        
         @media screen and (min-width: @tablet_width) {
             padding: (25px/@tablet_width)*100%;
             padding-bottom: 0;
@@ -49,6 +50,14 @@
     }
     &__demo {        
         background-color: @gray;
+    }
+    
+    &__wrapper {
+        @media screen and (min-width: @pc_width) {
+            display: flex;
+            flex-direction: column-reverse;
+            justify-content: space-between;
+         }
     }
     
     .feature {
@@ -71,10 +80,23 @@
          }
     }
     
+    &__pictures_block {
+        @media screen and (min-width: @pc_width) {
+            display: flex;
+            justify-content: space-around;
+         }
+    }
+    
     &__promo_img {
         position: relative;
         margin-left: 20px;
         background: none;
         z-index: 2;
+        
+        &--additional {
+            @media screen and (max-width: @pc_width ) {
+                display: none;
+            }
+        }
     }
 }
