--- a/less/blocks/main_page_footer.less
+++ b/less/blocks/main_page_footer.less
@@ -13,7 +13,7 @@
         width: 145px;*/
         //background: url("@{img_url}/Pink-logo-footer-2@1x.png") 0 0 no-repeat;
     }
-    @media screen and (max-width: @mobile_width - 1) {
+    @media screen and (max-width: @tablet_width ) {
             display: none;
     }
 }
