--- a/css/main.css
+++ b/css/main.css
@@ -268,9 +268,9 @@ a {
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
     -webkit-align-content: space-between;
         -ms-flex-line-pack: justify;
             align-content: space-between;
@@ -301,14 +301,32 @@ a {
   font-size: 18px;
   font-weight: 700;
 }
+@media screen and (min-width: 1200px) {
+  .features .feature__title {
+    font-size: 30px;
+  }
+}
 .features .feature__desc {
   line-height: 24px;
   font-weight: 300;
+}
+@media screen and (min-width: 1200px) {
+  .features .feature__desc {
+    font-weight: 400;
+    font-size: 18px;
+  }
 }
 @media screen and (min-width: 700px) {
   .features .feature {
     padding: 3.57142857%;
     text-align: left;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .features .feature {
+    padding: 2.08333333%;
+    width: 230px;
+    text-align: center;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -323,7 +341,6 @@ a {
 }
 .features__promo_img {
   position: relative;
-  margin-left: 20px;
   background: none;
   z-index: 2;
 }
