--- a/less/blocks/ads.less
+++ b/less/blocks/ads.less
@@ -1,14 +1,19 @@
 .ads{
     display: none;
     
-    padding: 30px;
-    
     @media screen and (min-width: @tablet_width) {
-                display: flex;                
+                display: block;                
     }
     @media screen and (min-width: @pc_width) {
                 background: @gray;         
+    }
+    &__wrap {
+        padding: 50px;
+    
+        @media screen and (min-width: @tablet_width) {
+                display: flex;                
         }
+    }
     
     &__timer {
         position: relative;
@@ -17,7 +22,8 @@
         background: url("@{img_url}/timer-2.svg") 0 0 no-repeat; 
         
         @media screen and (min-width: @pc_width) {
-                background: url("@{img_url}/timer-3.svg") 0 0 no-repeat;                 
+            background: url("@{img_url}/timer-3.svg") 0 0 no-repeat;  
+            margin-right: 100px;
         }
         
         
@@ -57,7 +63,12 @@
         font-size: @mini-gigant;
         font-weight: 700;
         line-height: 36px;
-        width: 200px;    
+        width: 200px;   
+        
+        @media screen and (min-width: @pc_width) {
+            width: 500px;     
+            padding-bottom: 20px;
+        }
     }
     
     &__text {
@@ -65,6 +76,12 @@
         font-weight: 400;
         line-height: 24px;
         width: 300px;
+        
+        @media screen and (min-width: @pc_width) {
+            width: 500px;         
+            font-size: @big_size;
+            padding-bottom: 20px;
+        }
     }
     
     &__link {
@@ -72,6 +89,12 @@
         margin-top: 10px;
         color: @pink;
         text-decoration: underline;
+         font-weight: 400;
+        @media screen and (min-width: @pc_width) {
+            width: 500px;         
+            font-size: @big_size;
+            padding-bottom: 20px;
+        }
     }
     
 }
