--- a/css/main.css
+++ b/css/main.css
@@ -771,7 +771,7 @@ a {
   width: 30px;
   height: 25px;
   top: 30%;
-  left: 40%;
+  left: 80%;
 }
 .price__icon--yes {
   background: url("../../img/yes.svg") 0 0 no-repeat;
@@ -779,35 +779,26 @@ a {
 .price__icon--no {
   background: url("../../img/no.svg") 0 0 no-repeat;
 }
-@media screen and (min-width: 320px) and (max-width: 700px) {
+@media screen and (min-width: 700px) {
   .price__icon {
-    left: 85%;
+    left: 40%;
   }
 }
 .price__table {
-  margin: 0 auto;
   border-collapse: collapse;
+  margin-left: -275px;
 }
 .price__table th:first-child {
   background: #f2f2f2;
 }
-.price__table td {
-  position: relative;
-  background: #ffffff;
-  padding: 15px 40px;
-  color: #283645;
-  font-size: 18px;
-  font-weight: 400;
-  text-align: left;
-  border: 2px solid #e5e5e5;
-}
-.price__table td:not(:first-child) {
-  font-size: 0;
+.price__table td:first-child,
+.price__table th:first-child {
+  display: none;
 }
 .price__table th {
   position: relative;
   background: #283645;
-  padding: 20px 70px;
+  padding: 20px 20px;
   color: #ffffff;
   font-size: 18px;
   font-weight: 700;
@@ -815,7 +806,29 @@ a {
   border-right: 2px solid #e5e5e5;
   text-transform: uppercase;
 }
-@media screen and (min-width: 700px) and (max-width: 1200px) {
+.price__table td {
+  position: relative;
+  background: #ffffff;
+  padding: 20px 20px;
+  padding-right: 160px;
+  color: #283645;
+  font-size: 14px;
+  font-weight: 400;
+  text-align: left;
+  border: 2px solid #e5e5e5;
+  text-transform: uppercase;
+}
+@media screen and (min-width: 700px) {
+  .price__table {
+    margin: 0 auto;
+  }
+  .price__table td:first-child,
+  .price__table th:first-child {
+    display: block;
+  }
+  .price__table td:not(:first-child) {
+    font-size: 0;
+  }
   .price__table th {
     font-size: 16px;
     padding: 10px 40px;
@@ -825,27 +838,35 @@ a {
     padding: 15px 20px;
   }
 }
-@media screen and (min-width: 320px) and (max-width: 700px) {
-  .price__table {
-    margin-left: -350px;
-  }
-  .price__table td:not(:first-child) {
-    font-size: 14px;
-  }
+@media screen and (min-width: 1200px) {
   .price__table td {
-    text-align: left;
-    text-transform: uppercase;
-    padding: 20px;
+    padding: 15px 40px;
+    font-size: 18px;
+    font-weight: 400;
+  }
+  .price__table th {
+    padding: 20px 70px;
+    font-size: 18px;
+    font-weight: 700;
   }
 }
 .price__cost {
   display: block;
-  font-size: 24px;
-  font-weight: 300;
+}
+@media screen and (min-width: 320px) {
+  .price__cost {
+    font-size: 24px;
+    font-weight: 300;
+  }
 }
 @media screen and (min-width: 700px) {
   .price__cost {
     font-size: 18px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .price__cost {
+    font-size: 24px;
   }
 }
 .price__hit::before {
