--- a/less/blocks/price.less
+++ b/less/blocks/price.less
@@ -8,7 +8,7 @@
         width: 30px;
         height: 25px;
         top: 30%;
-        left: 50% - 10px;
+        left: 100% - 20px;
         
         &--yes {
             background: url("@{img_url}/yes.svg") 0 0 no-repeat;
@@ -17,83 +17,106 @@
         &--no {
             background: url("@{img_url}/no.svg") 0 0 no-repeat;
         }
-        @media screen and (min-width: @mobile_width ) and (max-width: @tablet_width )        {
-            left: 100% - 15px;
-            
+        @media screen and (min-width: @tablet_width ) {            
+            left: 50% - 10px;            
         }
     }
     
     &__table {
-        margin: 0 auto;
         border-collapse: collapse;
         
         & th:first-child{
             background: @gray;
         }
+        
 
-        & td {
-            position: relative;
-            background: @white;
-            padding: 15px 40px;
-            color:@blue;
-            font-size: @big_size;
-            font-weight: 400;
-            text-align: left;
-            border: 2px solid #e5e5e5;
-        }
+            margin-left: -275px;
+            
+            & td:first-child,  & th:first-child{
+                display: none;
+            }
+            
+            & th {        
+                position: relative;
+                background: @blue;
+                padding: 20px 20px;
+                color: @white;
+                font-size: @big_size;
+                font-weight: 700;
+                text-align: center;
+                border-right: 2px solid #e5e5e5;
+                text-transform: uppercase;
+            }
+            
+            & td {
+                position: relative;
+                background: @white;
+                padding: 20px 20px;
+                padding-right: 160px;
+                color:@blue;
+                font-size: @base_size;
+                font-weight: 400;
+                text-align: left;
+                border: 2px solid #e5e5e5;
+                text-transform: uppercase;
+            }        
         
-        & td:not(:first-child) {
-            font-size: 0;
-        }
         
         
-        & th {
-            position: relative;
-            background: @blue;
-            padding:20px 70px;
-            color: @white;
-            font-size: @big_size;
-            font-weight: 700;
-            text-align: center;
-            border-right: 2px solid #e5e5e5;
-            text-transform: uppercase;
-        }
-        @media screen and (min-width: @tablet_width ) and (max-width: @pc_width ) {
+        @media screen and (min-width: @tablet_width ) {
+            
+            margin: 0 auto;
+            & td:first-child,  & th:first-child{
+                display: block;
+            }
+            
+            & td:not(:first-child) {
+                font-size: 0;
+            }
+            
             & th {
                 font-size: @big_size - 2px;
-                padding:10px 40px;
-                
+                padding:10px 40px;                
             }
             & td {
                 font-size: @base_size;  
                 padding: 15px 20px;
             }
+            
         }
-        @media screen and (min-width: @mobile_width ) and (max-width: @tablet_width )        {
-            margin-left: -350px;
-            & td:not(:first-child) {
-                font-size: @base_size;
-            }
-            & td:not(:nth-child(3)), & th:not(:nth-child(3)) {
-               // display: none;
-            }
+        
+        @media screen and (min-width: @pc_width ) {
+            
             & td {
-               text-align: left;
-               text-transform: uppercase;
-               padding: 20px;
+                padding: 15px 40px;
+                font-size: @big_size;
+                font-weight: 400;
             }
             
+            & th {
+                padding:20px 70px;
+                font-size: @big_size;
+                font-weight: 700;              
+            }
+                        
         }
         
     }
     
     &__cost {
         display: block;
-        font-size: @very_big_size;
-        font-weight: 300;
         
+        @media screen and (min-width: @mobile_width ) {
+            font-size: @very_big_size;
+            font-weight: 300;
+        }
+                
         @media screen and (min-width: @tablet_width ) {
            font-size: @big_size;
+        }
+        
+        @media screen and (min-width: @pc_width ) {
+            font-size: @very_big_size;
         }
             
     }
