--- a/less/blocks/application.less
+++ b/less/blocks/application.less
@@ -11,9 +11,10 @@
     
     @media screen and (min-width: @pc_width) {   
         padding: 0;
-        padding-top: 280px;
+        padding-top: (280px/@pc_width) * 100%;
         background: url("@{img_url}/iphone-hand-3@1x.png") 60% 100% no-repeat,
-                                      url("@{img_url}/background-3@1x.jpg") 50% 100% no-repeat;
+                                      url("@{img_url}/background-fullsize.jpg") 50% 100% no-repeat;
+        background-size: auto, cover;
     }
 
     background-color: darken(@blue, 10%);
