--- a/less/blocks/main_page_footer.less
+++ b/less/blocks/main_page_footer.less
@@ -3,8 +3,9 @@
     z-index: 10;
     
     padding: 20px;
-    //background: green;
     display: flex;
+    justify-content: space-between;
+    
     
    &__logo{
         color: black;
@@ -13,6 +14,58 @@
         width: 145px;*/
         //background: url("@{img_url}/Pink-logo-footer-2@1x.png") 0 0 no-repeat;
     }
+    
+    &__icons_block {
+        display: flex;
+        align-content: center;        
+    }
+    
+    &__icon {        
+        font-size: 0px;
+        width: 45px;
+        height: 45px;
+        margin:0 5px;
+        border: 2px solid @gray_light;
+        border-radius: 100%;
+        
+        &--twitter {
+            background: url("@{img_url}/twitter.svg") center center no-repeat;
+        }
+        
+        &--facebook {
+            background: url("@{img_url}/facebook.svg") center center no-repeat;
+        }
+        &--youtube {
+            background: url("@{img_url}/youtube.svg") center center no-repeat;
+        }
+    }
+    
+    &__copyright_block {
+        margin-top: 10px;
+        color: @blue;
+        font-size: @big_size;
+        font-weight: 400;
+        vertical-align: top;
+        
+    }
+    
+    &__design_icon {
+        display: inline-block;
+        margin: 0 5px;
+        width: 30px;
+        height: 35px;
+        background: url("@{img_url}/glukhanko.svg") 0 0 no-repeat;
+    }
+    
+    &__ha_icon {
+        display: inline-block;
+        margin: 0 5px;
+        width: 30px;
+        height: 35px;
+        background: url("@{img_url}/htmlacademy.svg") 0 0 no-repeat;
+    }
+    
+
     @media screen and (max-width: @tablet_width ) {
             display: none;
     }
