--- a/less/variables.less
+++ b/less/variables.less
@@ -6,9 +6,9 @@
 @black: #000;
 @white: #fff;
 @pink: #d22856;
-@yellow:#f8e514;
 
 @gray:#f2f2f2;
+@gray_light:#e9eaec;
 
 @blue_menu:  #233343;
 @menu_shadow: #455261;
