--- a/css/main.css
+++ b/css/main.css
@@ -137,6 +137,13 @@ a {
     font-weight: 700;
   }
 }
+.application__button:hover {
+  background: #ffffff;
+  color: #d22856;
+}
+.application__button:active {
+  color: rgba(210, 40, 86, 0.3);
+}
 .application__slogan {
   padding: 0px 9.375%;
   margin-top: 7.8125%;
@@ -580,6 +587,14 @@ a {
   font-size: 24px;
   text-align: center;
 }
+.contact__addr--email:hover {
+  color: #283645;
+  text-decoration: underline;
+}
+.contact__addr--email:active {
+  color: #f2f2f2;
+  text-decoration: none;
+}
 .main_menu {
   position: absolute;
   list-style: none;
@@ -630,10 +645,19 @@ a {
 }
 @media screen and (min-width: 1200px) {
   .main_menu__link {
-    padding: 0 50px;
+    padding: 0;
+    padding-bottom: 10px;
+    margin: 0 50px;
     font-weight: 400;
     text-transform: none;
     border: none;
+  }
+  .main_menu__link:hover {
+    border-bottom: 2px solid #ffffff;
+  }
+  .main_menu__link:active {
+    border: none;
+    opacity: .3;
   }
 }
 @media screen and (max-width: 1200px) {
@@ -754,12 +778,6 @@ a {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-.main_page_footer__logo {
-  color: black
-  /*display: inline-block;
-        height: 40px;
-        width: 145px;*/
-}
 .main_page_footer__icons_block {
   display: -webkit-flex;
   display: -ms-flexbox;
@@ -785,6 +803,12 @@ a {
 .main_page_footer__icon--youtube {
   background: url("../../img/youtube.svg") center center no-repeat;
 }
+.main_page_footer__icon:hover {
+  border-color: #283645;
+}
+.main_page_footer__icon:active {
+  opacity: .3;
+}
 .main_page_footer__copyright_block {
   margin-top: 10px;
   color: #283645;
@@ -792,19 +816,20 @@ a {
   font-weight: 400;
   vertical-align: top;
 }
-.main_page_footer__design_icon {
+.main_page_footer__copyicon {
   display: inline-block;
   margin: 0 5px;
   width: 30px;
   height: 35px;
+}
+.main_page_footer__copyicon--design {
   background: url("../../img/glukhanko.svg") 0 0 no-repeat;
 }
-.main_page_footer__ha_icon {
-  display: inline-block;
-  margin: 0 5px;
-  width: 30px;
-  height: 35px;
+.main_page_footer__copyicon--ha {
   background: url("../../img/htmlacademy.svg") 0 0 no-repeat;
+}
+.main_page_footer__copyicon:active {
+  opacity: .3;
 }
 @media screen and (max-width: 700px) {
   .main_page_footer {
