--- a/less/blocks/contacts.less
+++ b/less/blocks/contacts.less
@@ -102,5 +102,16 @@
         color: @pink;
         font-size: @very_big_size;
         text-align: center;
+        
+        &--email {
+            &:hover {
+                color: @blue;
+                text-decoration: underline;
+            }
+            &:active {
+                color: @gray;
+                text-decoration: none;
+            }
+        }
     }
 }
