--- a/less/blocks/main_menu.less
+++ b/less/blocks/main_menu.less
@@ -17,11 +17,14 @@
         justify-content: flex-end;
         margin-top: -60px;    
     }
+    
     &__item {
         text-align: center;
         background:@blue_menu;
+        
         @media screen and (min-width: @pc_width) {
             background: none;   
+            
         }
     }
     &__link {
@@ -35,10 +38,20 @@
         text-transform: uppercase;
         
         @media screen and (min-width: @pc_width) {
-            padding: 0 50px;
+            padding: 0;
+            padding-bottom: 10px;
+            margin: 0 50px;
             font-weight: 400;
             text-transform: none;
             border: none;
+            
+            &:hover {
+                border-bottom: 2px solid @white;
+            }
+            &:active {
+                border: none;
+                opacity: .3;
+            }
         }
     }
     
