--- a/css/main.css
+++ b/css/main.css
@@ -41,6 +41,7 @@ a {
   background: rgba(0, 0, 0, 0.4);
 }
 .main_page_header__menu_container {
+  position: relative;
   padding: 6.25%;
 }
 @media screen and (min-width: 700px) {
@@ -53,9 +54,11 @@ a {
     padding: 2.5%;
   }
 }
-.main_page_header__menu_container--menu_open {
-  background: #233343;
-  border-bottom: 1px solid #000000;
+@media screen and (max-width: 1200px) {
+  .main_page_header__menu_container--menu_open {
+    background: #233343;
+    border-bottom: 1px solid #000000;
+  }
 }
 .main_page_header__logo {
   width: 75px;
@@ -76,11 +79,17 @@ a {
   }
 }
 .main_page_header__main_menu_button {
+  position: absolute;
+  right: 20px;
   width: 50px;
   height: 25px;
   display: inline-block;
-  float: right;
   background: url("../../img/menu-burger.svg") 0 0 no-repeat;
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
+  transition: -webkit-transform 1s ease;
+  transition: transform 1s ease;
 }
 @media screen and (min-width: 1200px) {
   .main_page_header__main_menu_button {
@@ -88,6 +97,7 @@ a {
   }
 }
 .main_page_header__main_menu_button--close {
+  width: 25px;
   background: url("../../img/menu-cross.svg") 0 0 no-repeat;
 }
 @media screen and (min-width: 1200px) {
@@ -96,7 +106,9 @@ a {
   }
 }
 .main_page_header__main_menu_button--hidden {
-  display: none;
+  -webkit-transform: translateY(-200px);
+      -ms-transform: translateY(-200px);
+          transform: translateY(-200px);
 }
 .application {
   padding-top: 100px;
@@ -607,6 +619,11 @@ a {
       -ms-flex-direction: column;
           flex-direction: column;
   width: 320px;
+  transition: -webkit-transform 1s ease;
+  transition: transform 1s ease;
+  -webkit-transform: translateY(0);
+      -ms-transform: translateY(0);
+          transform: translateY(0);
 }
 @media screen and (min-width: 700px) {
   .main_menu {
@@ -660,9 +677,18 @@ a {
     opacity: .3;
   }
 }
-@media screen and (max-width: 1200px) {
+.main_menu--hidden {
+  opacity: 0;
+  -webkit-transform: translateY(-600px);
+      -ms-transform: translateY(-600px);
+          transform: translateY(-600px);
+}
+@media screen and (min-width: 1200px) {
   .main_menu--hidden {
-    display: none;
+    opacity: 1;
+    -webkit-transform: none;
+        -ms-transform: none;
+            transform: none;
   }
 }
 .ads {
