--- a/less/blocks/slider_frame.less
+++ b/less/blocks/slider_frame.less
@@ -1,4 +1,11 @@
 .slider_frame {
+    position: relative;   
+    overflow-x: hidden;
+    
+    &--additional_padding {
+        padding-top: 200px;
+    }
+    
     &__body {
         position: relative;
     } 
