--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,48 @@ a {
   color: #ffffff;
   text-decoration: none;
 }
+.gradient::after {
+  content: '';
+  width: 105%;
+  display: block;
+  background: #f2f2f2;
+  -webkit-transform: rotate(-6deg) translate(-15px, 130px);
+      -ms-transform: rotate(-6deg) translate(-15px, 130px);
+          transform: rotate(-6deg) translate(-15px, 130px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 200px;
+  z-index: 1;
+}
+@media screen and (min-width: 700px) {
+  .gradient::after {
+    -webkit-transform: rotate(-5deg) translate(-15px, 160px);
+        -ms-transform: rotate(-5deg) translate(-15px, 160px);
+            transform: rotate(-5deg) translate(-15px, 160px);
+  }
+}
+.gradient--before::before {
+  content: '';
+  width: 105%;
+  display: block;
+  background: #f2f2f2;
+  -webkit-transform: rotate(-6deg) translate(-15px, 130px);
+      -ms-transform: rotate(-6deg) translate(-15px, 130px);
+          transform: rotate(-6deg) translate(-15px, 130px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 200px;
+  z-index: 1;
+}
+@media screen and (min-width: 700px) {
+  .gradient--before::before {
+    -webkit-transform: rotate(-5deg) translate(-15px, 130px);
+        -ms-transform: rotate(-5deg) translate(-15px, 130px);
+            transform: rotate(-5deg) translate(-15px, 130px);
+  }
+}
 .clearfix::after {
   content: "";
   display: table;
@@ -298,6 +340,8 @@ a {
 }
 .features__demo {
   background-color: #f2f2f2;
+  position: relative;
+  z-index: 10;
 }
 @media screen and (min-width: 1200px) {
   .features__wrapper {
@@ -436,6 +480,13 @@ a {
         -ms-flex-order: -1;
             order: -1;
   }
+}
+.slider_frame {
+  position: relative;
+  overflow-x: hidden;
+}
+.slider_frame--additional_padding {
+  padding-top: 200px;
 }
 .slider_frame__body {
   position: relative;
@@ -865,7 +916,8 @@ a {
 .price {
   background: #f2f2f2;
   padding: 80px 0;
-  overflow: hidden;
+  position: relative;
+  z-index: 10;
 }
 .price__icon {
   position: absolute;
@@ -888,6 +940,8 @@ a {
 .price__table {
   border-collapse: collapse;
   margin-left: -570px;
+  position: relative;
+  z-index: 10;
 }
 .price__table th:first-child {
   background: #f2f2f2;
