--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -50,6 +50,8 @@
     }
     &__demo {        
         background-color: @gray;
+        position: relative;
+        z-index: 10;
     }
     
     &__wrapper {
